Only run on upstream, not forks, addresses #53

--- a/.github/workflows/auto_insp_update.yml
+++ b/.github/workflows/auto_insp_update.yml
@@ -13,6 +13,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    # Only run on upstream, not on each fork
+    if: github.repository_owner == 'sxs-collaboration'
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
