Add a SpEC page

--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ plugins:
   - jekyll-optional-front-matter
   - jekyll-titles-from-headings
   - jekyll-sitemap
+  - jekyll-redirect-from
 
 sass:
   style: compressed
